# KOTE

./: pyproject.toml
codes/: KOTE_huggingface_transformers.ipynb  KOTE_pytorch_lightning.ipynb  Kote_1_6.ipynb  Kote_1_8.ipynb  app.py  emotion_classification_results.csv  final.csv  results.txt
